--- a/sass/photographer_page-components/_form.scss
+++ b/sass/photographer_page-components/_form.scss
@@ -13,7 +13,7 @@ form {
     }
 
     h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 400;
         margin-bottom: -2rem;
     }
@@ -56,11 +56,11 @@ form {
     input, textarea {
         border: none;
         border-radius: .3rem;
-        font-size: 1rem;
+        font-size: .5rem;
     }
 
     label {
-        font-size: 1.2rem;
+        font-size: 1rem;
         margin: .3rem 0 .2rem;
     }
 
