--- a/sass/photographer_page-components/_phProfile.scss
+++ b/sass/photographer_page-components/_phProfile.scss
@@ -105,7 +105,7 @@
     }
     #ph-contact {
         position: absolute;
-        top: 40%;
+        top: 25%;
         left: 45%;
     }
 }
@@ -124,7 +124,7 @@
 @media (min-width: 900px){
 
     .ph-profil {
-        background-color: #fafafa;
+        background-color: #e6d8d8;
         padding: 2rem;
 
         img {
